# diffusion-research

./: .gitattributes  .gitignore  .gitmodules  README.md  gmm copy.csv  gmm-2.csv  gmm-old.csv  gmm.csv  pyproject.toml
notebooks/: denoising-diffusion-probabilistic-models-intro.ipynb  gmm-particles-old.ipynb  gmm.ipynb  mnist.ipynb  old_gmm.ipynb  superconductor.ipynb
paper/: .gitignore  ic_eee_thesis.cls  main.tex  references.bib  refs.bib  statsmsc.cls  supplementary.aux
paper/chapters/: 0_preamble.tex  1_introduction.tex  2_background.tex  3_methods.tex  4_experiments.tex  4_experiments_and_results.tex  5_conclusion.tex  5_discussion.tex  6_appendix.tex  6_endmatter.tex  7_appendix.tex  Abstract.tex  Acknowledgement.tex  Chapter1.tex  Chapter2.tex  OrigSta_Copyright.tex  _old_appendix.tex  appendix.tex  discussion.tex  endmatter.tex  introduction.tex  list_of_acronyms.tex  methods.tex  preamble.tex  results.tex
paper/make_files/: class.cls  macros.sty  packages.sty  statsmsc.cls
paper/old/: main.fdb_latexmk  main.fls
paper/old/chapters/: appendix_a.tex  chapter_1.tex  conclusion.tex
paper/old/make_files/: macros.sty  packages.sty
poster/: .gitignore  beamercolorthemeimperial.sty  beamerthemegemini.sty  poster.bib  poster.tex
presentation/: .gitignore  main.tex  references.bib
scripts/: bb-table-maker.py  branin-presentation.py  branin.py  gifs-to-pngs.sh  gmm-animate.py  gmm-plot.py  gmm-presentation.py  gmm-table-maker.py  gmm.ipynb  gmm.py  grf.py  sample_condition.py  table_maker.py
