[tool.poetry]
name = "diffusion-research"
version = "0.1.0"
description = "Meta/super repository encapsulating my research on diffusion models and inverse problems"
authors = ["Ben Dowling <ben.dowling@icloud.com>"]
license = "LICENCE.md"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"

diffusionlib = {path = "diffusionlib", extras = ["cuda"], develop = true}
# diffusionlib = {path = "diffusionlib", develop = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pylint = "^3.2.3"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]

# E - pycodestyle error
# F - pyflakes
# I - isort
# N - pep8-naming
# W - pycodestyle warn
# UP - pyupgrade
# TODO: D - pydocstyle
select = ["E", "F", "I", "N", "W", "UP"]

ignore = [
    "F722" # forward-annotation-syntax-error; for jaxtyping
]

line-length = 100

[tool.ruff.per-file-ignores]
# Ignore module level import not at top of file
"notebooks/*.ipynb" = ["E402"]
